Kubernetes/nginx/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-11-17T01:36:30Z"
  labels:
    app: webserver
  name: webserver
  namespace: default
  uid: 972081db-142e-4f8f-af68-1b2d50698785
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webserver
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
